# CollisionAlgorithm

./: .gitlab-ci.yml  CMakeLists.txt  CollisionAlgorithmConfig.cmake.in  README.md  RegressionStateScenes.regression-tests
.github/workflows/: ci.yml
doc/: CollisionAlgorithm.doxyfile  assist_doc.md  component_list.md  doc.md
doc/CollisionAlgorithm/: component_list.md
examples/: NeedleInsertion.py  NeedleInsertionHaptics.py
scenes/: InsertionGeomagic.py  InsertionHaptics_Box.py  InsertionHaptics_Liver.py  NeedleInsertion.py  NeedleInsertionCycles.py  NeedleInsertionHaptics.py  NeedleInsertionLayers.py  RegressionStateScenes.regression-tests
scenes/RecordState/: Haptics_Box.txt  Haptics_Liver.txt  NeedleInsertion.txt  NeedleInsertionCycles.txt  NeedleInsertionLayers.txt
src/CollisionAlgorithm/: BaseAABBBroadPhase.h  BaseAlgorithm.h  BaseElement.h  BaseGeometry.h  BaseOperation.h  BaseProximity.h  CollisionPipeline.cpp  CollisionPipeline.h  DataDetectionOutput.h  ElementIterator.h  InternalData.h  config.h.in  initCollisionAlgorithm.cpp  initCollisionAlgorithm.h  initPlugin.cpp
src/CollisionAlgorithm/algorithm/: Find2DClosestProximityAlgorithm.cpp  Find2DClosestProximityAlgorithm.h  FindClosestProximityAlgorithm.cpp  FindClosestProximityAlgorithm.h  InsertionAlgorithm.cpp  InsertionAlgorithm.h
src/CollisionAlgorithm/broadphase/: AABBBroadPhase.cpp  AABBBroadPhase.h  FullAABBBroadPhase.cpp  FullAABBBroadPhase.h
src/CollisionAlgorithm/elements/: EdgeElement.cpp  EdgeElement.h  PointElement.cpp  PointElement.h  TetrahedronElement.cpp  TetrahedronElement.h  TriangleElement.cpp  TriangleElement.h
src/CollisionAlgorithm/filters/: DistanceFilter.cpp  DistanceFilter.h
src/CollisionAlgorithm/geometry/: EdgeGeometry.cpp  EdgeGeometry.h  PointGeometry.cpp  PointGeometry.h  SubsetGeometry.cpp  SubsetGeometry.h  TetrahedronGeometry.cpp  TetrahedronGeometry.h  TriangleGeometry.cpp  TriangleGeometry.h
src/CollisionAlgorithm/operations/: ContainsPoint.cpp  ContainsPoint.h  CreateCenterProximity.cpp  CreateCenterProximity.h  FindClosestProximity.cpp  FindClosestProximity.h  NeedleOperations.cpp  NeedleOperations.h  Project.cpp  Project.h
src/CollisionAlgorithm/proximity/: EdgeProximity.h  FixedProximity.h  MechanicalProximity.h  MultiProximity.h  PointProximity.h  TetrahedronProximity.h  TriangleProximity.h
src/CollisionAlgorithm/toolbox/: EdgeToolBox.cpp  EdgeToolBox.h  PointToolBox.cpp  PointToolBox.h  TetrahedronToolBox.cpp  TetrahedronToolBox.h  TriangleToolBox.cpp  TriangleToolBox.h
src/sofa/collisionAlgorithm/: BaseAABBBroadPhase.h  BaseGeometry.h  BaseProximity.h  CollisionPipeline.cpp  CollisionPipeline.h  DataDetectionOutput.h  initPlugin.cpp
src/sofa/collisionAlgorithm/algorithm/: Find2DClosestProximityAlgorithm.cpp  Find2DClosestProximityAlgorithm.h  FindClosestProximityAlgorithm.cpp  FindClosestProximityAlgorithm.h  InsertionAlgorithm.cpp  InsertionAlgorithm.h  PunctureAlgorithm.cpp  PunctureAlgorithm.h
src/sofa/collisionAlgorithm/broadphase/: AABBBroadPhase.cpp  AABBBroadPhase.h  FullAABBBroadPhase.cpp
src/sofa/collisionAlgorithm/filters/: DistanceFilter.cpp  DistanceFilter.h
src/sofa/collisionAlgorithm/geometry/: EdgeGeometry.cpp  PointGeometry.cpp  PointGeometry.h  SubsetGeometry.cpp  TetrahedronGeometry.cpp  TriangleGeometry.cpp
src/sofa/collisionAlgorithm/operations/: ContainsPoint.cpp  ContainsPoint.h  NeedleOperations.cpp  NeedleOperations.h
src/sofa/collisionAlgorithm/proximity/: EdgeProximity.h  FixedProximity.h  MechanicalProximity.h  MultiProximity.h  PointProximity.h  TetrahedronProximity.h  TriangleProximity.h
src/sofa/collisionAlgorithm/toolbox/: TetrahedronToolBox.cpp  TetrahedronToolBox.h  TriangleToolBox.cpp  TriangleToolBox.h
